--- a/raspi/webserver/raspi_report.conf
+++ b/raspi/webserver/raspi_report.conf
@@ -5,7 +5,7 @@ server {
     ssl_certificate     /etc/nginx/certs/raspi.crt;
     ssl_certificate_key /etc/nginx/certs/raspi.key;
 
-    root /var/www/main;
+    root /var/www;
 
     location / {
         auth_basic           "Restricted";
