--- a/raspi/webserver/index.conf
+++ b/raspi/webserver/index.conf
@@ -27,6 +27,13 @@ server {
     add_header X-XSS-Protection "1; mode=block" always;
     add_header Referrer-Policy no-referrer;
 
+    location ^~ /log/reports/ {
+        expires -1;
+        add_header Cache-Control "no-store, no-cache, must-revalidate, proxy-revalidate" always;
+        add_header Pragma "no-cache" always;
+        try_files $uri $uri/ =404;
+    }
+    
     location / {
         auth_basic "Raspi Report Login";
         auth_basic_user_file /etc/nginx/.report_htpasswd;
