--- a/evaluation/sensor_config.json
+++ b/evaluation/sensor_config.json
@@ -27,7 +27,7 @@
     },
     "temperature2": {
       "name": "temperature2",
-      "alias": "Garden_Temperature",
+      "alias": "Basement_Temperature",
       "unit": "°C",
       "round": 1,
       "limits": [-10, 40],
@@ -39,7 +39,7 @@
     },
     "humidity2": {
       "name": "humidity2",
-      "alias": "Garden_Humidity",
+      "alias": "Basement_Humidity",
       "unit": "%RH",
       "round": 0,
       "limits": [0, 100],
@@ -49,7 +49,7 @@
     },
     "temperature3": {
       "name": "temperature3",
-      "alias": "temp3",
+      "alias": "Garden_Temperature",
       "unit": "°C",
       "round": 1,
       "limits": [-30, 50],
@@ -61,7 +61,7 @@
     },
     "humidity3": {
       "name": "humidity3",
-      "alias": "hum3",
+      "alias": "Garden_Humidity",
       "unit": "%RH",
       "round": 0,
       "limits": [0, 100],
