--- a/config/sensor_config.json
+++ b/config/sensor_config.json
@@ -46,6 +46,7 @@
   "TABLE": {
     "measurements_w": {
       "name": "measurements_w",
+      "alias": "w",
       "sensor_id": "0b55aada036f",
       "TIMESTAMP":{
         "name": "utms",
@@ -107,6 +108,7 @@
     },
     "measurements_th": {
       "name": "measurements_th",
+      "alias": "th",
       "sensor_id": "11566802925f",
       "TIMESTAMP":{
         "name": "utms",
