add wind report

--- a/config/sensor_config.json
+++ b/config/sensor_config.json
@@ -21,7 +21,7 @@
           "name": "directionDegree",
           "alias": "Wind_Direction_Degree",
           "field_type": "float",
-          "invalid_map": { "-9999": null, "-9999.0": null },
+          "invalid_map": {"-9999": null, "-9999.0": null},
           "unit": "°",
           "round": 1,
           "limits": [0, 360]
@@ -30,42 +30,45 @@
           "name": "direction",
           "alias": "Wind_Direction",
           "field_type": "string",
-          "invalid_map": { "-9999": null, "-9999.0": null },
+          "invalid_map": {"-9999": null, "-9999.0": null},
           "unit": ""
         },
         "windSpeed": {
           "name": "windSpeed",
-          "alias": "wind_Speed",
+          "alias": "Wind_Speed",
           "field_type": "float",
-          "invalid_map": { "-9999": null, "-9999.0": null },
+          "invalid_map": {"-9999": null, "-9999.0": null},
           "unit": "km/h",
           "round": 1,
           "limits": [0, 200],
           "warn": [0, 20],
-          "alarm": [0, 40],
+          "alarm": [0, 30],
+          "plot_limits": [0, 40],
           "color": "blue"
         },
         "gustSpeed": {
           "name": "gustSpeed",
           "alias": "Gust_Speed",
           "field_type": "float",
-          "invalid_map": { "-9999": null, "-9999.0": null },
+          "invalid_map": {"-9999": null, "-9999.0": null},
           "unit": "km/h",
           "round": 1,
           "limits": [0, 200],
-          "warn": [0, 25],
-          "alarm": [0, 50],
+          "warn": [0, 20],
+          "alarm": [0, 30],
+          "plot_limits": [0, 40],
           "color": "red"
         },
         "battery": {
           "name": "battery",
           "alias": "Battery_Status",
           "field_type": "boolean",
-          "invalid_map": { "-9999": null, "-9999.0": null },
+          "invalid_map": {"-9999": null, "-9999.0": null},
           "unit": "",
           "round": 0,
           "limits": [0, 1],
           "alarm": [0.9, 1.1],
+          "plot_limits": [0, 1],
           "color": "green"
         }
       }
@@ -84,88 +87,96 @@
           "name": "temperature1",
           "alias": "Outdoor_Temperature",
           "field_type": "float",
-          "invalid_map": { "-9999": null, "-9999.0": null },
+          "invalid_map": {"-9999": null, "-9999.0": null},
           "unit": "°C",
           "round": 1,
           "limits": [-20, 40],
           "warn": [3, 28],
           "alarm": [0, 35],
+          "plot_limits": [-20, 40],
           "color": "red"
         },
         "humidity1": {
           "name": "humidity1",
           "alias": "Outdoor_Humidity",
           "field_type": "int",
-          "invalid_map": {"127": 100 },
+          "invalid_map": {"127": 100},
           "unit": "%RH",
           "round": 0,
           "limits": [0, 100],
+          "plot_limits": [0, 100],
           "color": "red"
         },
         "temperature2": {
           "name": "temperature2",
           "alias": "Garden_Temperature",
           "field_type": "float",
-          "invalid_map": { "-9999": null, "-9999.0": null },
+          "invalid_map": {"-9999": null, "-9999.0": null},
           "unit": "°C",
           "round": 1,
           "limits": [-20, 40],
           "warn": [3, 28],
           "alarm": [0, 35],
+          "plot_limits": [-20, 40],
           "color": "blue"
         },
         "humidity2": {
           "name": "humidity2",
           "alias": "Garden_Humidity",
           "field_type": "int",
-          "invalid_map": {"127": 100 },
+          "invalid_map": {"127": 100},
           "unit": "%RH",
           "round": 0,
           "limits": [0, 100],
+          "plot_limits": [0, 100],
           "color": "blue"
         },
         "temperature3": {
           "name": "temperature3",
           "alias": "Basement_Temperature",
           "field_type": "float",
-          "invalid_map": { "-9999": null, "-9999.0": null },
+          "invalid_map": {"-9999": null, "-9999.0": null},
           "unit": "°C",
           "round": 1,
           "limits": [10, 30],
           "warn": [12, 25],
           "alarm": [10, 28],
+          "plot_limits": [10, 30],
           "color": "orange"
         },
         "humidity3": {
           "name": "humidity3",
           "alias": "Basement_Humidity",
           "field_type": "int",
-          "invalid_map": {"127": 100 },
+          "invalid_map": {"127": 100},
           "unit": "%RH",
           "round": 0,
           "limits": [0, 100],
+          "plot_limits": [0, 100],
           "color": "orange"
         },
         "temperatureIN": {
           "name": "temperatureIN",
           "alias": "Indoor_Temperature",
           "field_type": "float",
-          "invalid_map": { "-9999": null, "-9999.0": null },
+          "invalid_map": {"-9999": null, "-9999.0": null},
           "unit": "°C",
           "round": 1,
           "limits": [15, 35],
           "warn": [20, 28],
           "alarm": [17, 32],
+          "plot_limits": [15, 35],
           "color": "pink"
         },
         "humidityIN": {
           "name": "humidityIN",
           "alias": "Indoor_Humidity",
           "field_type": "int",
-          "invalid_map": {"127": 100 },
+          "invalid_map": {"127": 100},
           "unit": "%RH",
           "round": 0,
           "limits": [0, 100],
+          "plot_limits": [0, 100],
           "color": "pink"
         },
         "battery": {
@@ -175,6 +186,7 @@
           "unit": "",
           "round": 0,
           "limits": [0, 1],
+          "plot_limits": [0, 1],
           "alarm": [0.9, 1.1],
           "color": "green"
         }
