--- a/raspi/webserver/index.conf
+++ b/raspi/webserver/index.conf
@@ -39,9 +39,9 @@ server {
         try_files $uri $uri/ =404;
     }
 
-    # API an Python (Achtung: Trailing slash entfernt /api/ Prefix -> Backend sieht /update)
+    # API an Python Backend
     location /api/ {
-        proxy_pass http://127.0.0.1:8001/;
+        proxy_pass http://127.0.0.1:8001/api/;
         proxy_set_header Host              $host;
         proxy_set_header X-Real-IP         $remote_addr;
         proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
