--- a/config/sensor_config.json
+++ b/config/sensor_config.json
@@ -23,6 +23,7 @@
           "field_type": "float",
           "invalid_map": {"-9999": null, "-9999.0": null},
           "unit": "°",
+          "factor": 1,
           "round": 1,
           "limits": [0, 360]
         },
@@ -39,6 +40,7 @@
           "field_type": "float",
           "invalid_map": {"-9999": null, "-9999.0": null},
           "unit": "km/h",
+          "factor": 3.6,
           "round": 1,
           "limits": [0, 200],
           "warn": [0, 20],
@@ -52,6 +54,7 @@
           "field_type": "float",
           "invalid_map": {"-9999": null, "-9999.0": null},
           "unit": "km/h",
+          "factor": 3.6,
           "round": 1,
           "limits": [0, 200],
           "warn": [0, 20],
@@ -65,6 +68,7 @@
           "field_type": "boolean",
           "invalid_map": {"-9999": null, "-9999.0": null},
           "unit": "",
+          "factor": 1,
           "round": 0,
           "limits": [0, 1],
           "alarm": [0.9, 1.1],
@@ -89,6 +93,7 @@
           "field_type": "float",
           "invalid_map": {"-9999": null, "-9999.0": null},
           "unit": "°C",
+          "factor": 1,
           "round": 1,
           "limits": [-20, 40],
           "warn": [3, 28],
@@ -102,6 +107,7 @@
           "field_type": "int",
           "invalid_map": {"127": 100},
           "unit": "%RH",
+          "factor": 1,
           "round": 0,
           "limits": [0, 100],
           "plot_limits": [0, 100],
@@ -113,6 +119,7 @@
           "field_type": "float",
           "invalid_map": {"-9999": null, "-9999.0": null},
           "unit": "°C",
+          "factor": 1,
           "round": 1,
           "limits": [-20, 40],
           "warn": [3, 28],
@@ -126,6 +133,7 @@
           "field_type": "int",
           "invalid_map": {"127": 100},
           "unit": "%RH",
+          "factor": 1,
           "round": 0,
           "limits": [0, 100],
           "plot_limits": [0, 100],
@@ -137,6 +145,7 @@
           "field_type": "float",
           "invalid_map": {"-9999": null, "-9999.0": null},
           "unit": "°C",
+          "factor": 1,
           "round": 1,
           "limits": [10, 30],
           "warn": [12, 25],
@@ -150,6 +159,7 @@
           "field_type": "int",
           "invalid_map": {"127": 100},
           "unit": "%RH",
+          "factor": 1,
           "round": 0,
           "limits": [0, 100],
           "plot_limits": [0, 100],
@@ -161,6 +171,7 @@
           "field_type": "float",
           "invalid_map": {"-9999": null, "-9999.0": null},
           "unit": "°C",
+          "factor": 1,
           "round": 1,
           "limits": [15, 35],
           "warn": [20, 28],
@@ -174,6 +185,7 @@
           "field_type": "int",
           "invalid_map": {"127": 100},
           "unit": "%RH",
+          "factor": 1,
           "round": 0,
           "limits": [0, 100],
           "plot_limits": [0, 100],
@@ -184,6 +196,7 @@
           "alias": "Battery_Status",
           "field_type": "boolean",
           "unit": "",
+          "factor": 1,
           "round": 0,
           "limits": [0, 1],
           "plot_limits": [0, 1],
